Thu Nov 11 12:25:03 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Add new --filter option to allow the user to specify
	  new filters without patching omindex.cc.
	* docs/overview.rst: Document --filter.

Thu Nov 11 02:51:55 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Factor out handling for external filter programs which
	  simply return UTF-8 text on stdout.

Mon Nov 08 10:58:46 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc,svgparse.cc,svgparse.h: Extract author for SVG files.

Mon Nov 08 10:40:09 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Extract metadata from Microsoft Office 2007 file formats.

Mon Nov 08 10:21:13 GMT 2010  Olly Betts <olly@survex.com>

	* myhtmlparse.cc,myhtmlparse.h,omindex.cc: Extract author from HTML
	  documents.

Mon Nov 08 09:46:03 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Escape wildcard patterns being passed to unzip - in the
	  unlikely event that one of these matched files in or under the
	  current directory, we might fail to extract all the files we wanted
	  to.

Mon Nov 08 05:03:41 GMT 2010  Olly Betts <olly@survex.com>

	* metaxmlparse.cc,metaxmlparse.h,omindex.cc: Extract author from
	  OpenDocument documents.

Mon Nov 08 03:18:26 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Extract author from PDF metadata.

Mon Nov 08 03:15:17 GMT 2010  Olly Betts <olly@survex.com>

	* metaxmlparse.h: Initialise field member variable.

Mon Nov 08 00:28:07 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Index text in headers and footers for .odt and .docx
	  files.

Thu Nov 04 11:55:58 GMT 2010  Olly Betts <olly@survex.com>

	* omega.cc,omega.h,query.cc: If we catch an error early on, make sure
	  that if it's appropriate, we write out a "Content-Type:" HTTP header
	  and end the headers.

Thu Nov 04 11:39:10 GMT 2010  Olly Betts <olly@survex.com>

	* utf8converttest.cc: Add back in testcases for charset names with
	  hyphens in.
