@@ -1,3 +1,9 @@
+Thu Nov 11 23:23:07 GMT 2010  Olly Betts <olly@survex.com>
+
+	* omindex.cc: Refactor slightly to handle the unknown extension case
+	  up front, so we lose an indentation level for the known extension
+	  case.
+
 Thu Nov 11 12:25:03 GMT 2010  Olly Betts <olly@survex.com>
 
 	* omindex.cc: Add new --filter option to allow the user to specify
